asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__quit__confirm_quit.snap
---
source: asyncgit/src/lib/tui/git/tests/quit.rs
assertion_line: 29
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: bc670d3bb6a7cf9a
